# saleor

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Procfile  common.env  docker-compose.yml  lookups.py  pkb_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  settings.py  urls.py  wsgi.py
addons/plugins/: auth0_plugin.py  checkout_details_plugin.py  contracts_payment_plugin.py
annotations/: apps.py  urls.py  views.py
annotations/static/: bootstrap.min.css  channel_annotation_app.js  data_quality_app.js  main.css  parse_title_testbench.js  product_annotation_app.js  search-relevancy.css  search_relevancy_dashboard.js  titles_annotation_app.js  titles_translation_app.js
annotations/static/data/: IGB_requirements_for_import.csv  nonprofit_titles.csv  problematic_titles.csv  problematic_titles.txt  searchTestCases.json
annotations/templates/: channel_annotation.html  data_quality_dashboard.html  parse_title_testbench.html  product_annotation.html  search_relevancy_dashboard.html  titles_annotation.html  titles_translation.html
annotations/tests/functional/: test_categorisations.py  test_locations.py  test_update_channels.py
api/: arrayfield.py  locks.py  lookups.py  settings.py  urls.py  wsgi.py
api/annotations/: __init__.py  apps.py  urls.py  views.py
api/annotations/static/: categoriser_app.js  data_quality_app.js  healthcheck_app.js  industry_mapping.json  main.css  main_app.js  ordered_job_titles.csv  ordered_products.json  parse_title_testbench.js  posting_requirements.js  search_relevancy_dashboard.js  tab_app.js  titles_translation_app.js
api/annotations/templates/: categoriser.html  channel_annotation.html  data_quality_dashboard.html  headline-parser.html  index.html  parse_title_testbench.html  posting_requirements.html  product_annotation.html  search_relevancy_dashboard.html  titles_annotation.html
api/currency/: admin.py  apps.py  conversion.py  models.py  urls.py  views.py
api/currency/migrations/: 0001_initial.py  0003_exchangerate_created.py
api/igb/: admin.py  models.py  serializers.py  urls.py  views.py
api/plugins/: checkout_details_plugin.py  contracts_payment_plugin.py  metadata.py
api/products/: __init__.py  admin.py  apps.py  area.py  delivery_time.py  docs.py  geocoder.py  models.py  serializers.py  traffic.py  urls.py  views.py
api/salesforce/: sync.py
api/tests/: __init__.py
api/vonqtaxonomy/: __init__.py  apps.py  igb.py  models.py  translation.py  urls.py  views.py
currency/: admin.py  conversion.py  models.py  serializers.py  urls.py  views.py
currency/migrations/: 0002_auto_20201222_1221.py
field_permissions/: admin.py  models.py
igb/: apps.py  models.py  serializers.py  views.py
igb/api/: client.py
igb/migrations/: 0002_contract_facets.py  0003_contract_customer_id.py  0005_auto_20210921_1134.py
plugins/: checkout_details_plugin.py  contracts_payment_plugin.py
products/: admin.py  apps.py  docs.py  filters.py  geocoder.py  index.py  models.py  paginators.py  search.py  serializers.py  signals.py  traffic.py  translation.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_auto_20201014_0926.py  0006_auto_20201020_1342.py  0006_auto_20201021_1335.py  0007_auto_20201021_1449.py  0008_mapboxlocation.py  0009_mapboxlocation.py  0014_auto_20201109_1542.py  0015_auto_20201110_1010.py  0016_product_salesforce.py  0021_auto_20201117_1039.py  0045_auto_20210126_1810.py  0048_auto_20210209_1426.py  0051_auto_20210222_1124.py  0055_auto_20210310_1448.py  0058_auto_20210312_1102.py  0061_product_ra_click_frequency.py  0064_auto_20210408_1114.py  0066_auto_20210415_1743.py  0081_disabled_product_reason.py  0082_populate_remarks.py  0084_populate_remarks_correctly.py  0086_populate_remarks_for_active_products.py  0087_truncate_channel_name_20210629_1006.py  0089_auto_20210630_1636.py  0090_alter_product_remarks.py  0091_alter_channel_type.py  0093_auto_20210908_1920.py  0094_auto_20210913_2111.py  0095_channel_igb_facets.py
products/search/: docs.py  filter_collection.py  filters.py  index.py  scores.py  search.py
saleor/: settings.py  urls.py
saleor/account/: app.py  events.py  models.py  notifications.py  search.py  thumbnails.py  utils.py
saleor/campaign/: apps.py  error_codes.py  models.py
saleor/checkout/: complete_checkout.py  fetch.py  utils.py
saleor/core/: auth_backend.py  jwt.py  middleware.py  search_tasks.py
saleor/csv/: events.py  models.py
saleor/demo/: settings.py
saleor/discount/: models.py  utils.py
saleor/giftcard/: events.py  utils.py
saleor/graphql/: api.py  context.py
saleor/invoice/: events.py  notifications.py
saleor/order/: actions.py  events.py  models.py  notifications.py  utils.py
saleor/payment/: gateway.py  utils.py
saleor/plugins/: base_plugin.py  manager.py
saleor/product/: models.py
saleor/tests/: fixtures.py
saleor/warehouse/: availability.py
saleor/webhook/: payloads.py
salesforce/: salesforce_client.py  sync.py
test/: test_locations.py
tests/: __init__.py
tests/integration/: test_location.py  test_product_job_titles.py  test_search.py  test_traffic_data.py
tests/schema/: test_schema_for_integration.py
tests/unit/: test_admin.py  test_admin_field_permissions.py  test_available_ats_flag_migration.py  test_contracts_endpoint.py  test_currency_rates.py  test_encryption.py  test_geocoder.py  test_has_html_migration.py  test_health.py  test_industries.py  test_job_functions.py  test_model_translations.py  test_product_industries.py  test_product_job_titles.py  test_product_job_titles_.py  test_product_locations.py  test_product_search.py  test_products.py  test_produt_locations.py  test_similarweb_client.py  test_traffic_data.py  test_truncation.py
vonq/: jwt_utils.py  middleware.py  mutations.py  permissions.py  queries.py  schema.py
vonq/plugins/: auth0_plugin.py  checkout_details_plugin.py  contracts_payment_plugin.py  metadata.py
vonqtaxonomy/: apps.py  igb.py  views.py
vonqtaxonomy/mappings/: vonq_jobcategories.json
vonqtaxonomy/migrations/: 0001_initial.py
(+267 files in other folders)
