[tool.poetry]
name = "saleor"
version = "3.5.0-a"
description = "A modular, high performance, headless e-commerce platform built with Python, GraphQL, Django, and React."
authors = [ "Saleor Commerce <hello@saleor.io>" ]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://saleor.io/"
repository = "https://github.com/mirumee/saleor"
documentation = "https://docs.saleor.io/"

  [tool.poetry.dependencies]
  python = "~3.9"
  babel = ">=2.8,<2.11"
  boto3 = "^1.22"
  braintree = ">=4.2,<4.16"
  dj-database-url = "^0"
  dj-email-url = "^1"
  django = "^3.2.4"
  django-countries = "^7.2"
  django-filter = "^22.1"
  django-measurement = "^3.0"
  django-mptt = "^0"
  django-phonenumber-field = ">=4,<7"
  django-prices = "^2.1"
  django-prices-openexchangerates = "^1.0.1"
  django-prices-vatlayer = "^1.1.0"
  django-versatileimagefield = "^2.1"
  draftjs-sanitizer = "^1.0.0"
  faker = ">=4.1,<14.0"
  freezegun = "^1"
  google-cloud-storage = "^2.0.0"
  google-i18n-address = "^2.5.2"
  google-measurement-protocol = "^1.0"
  html-to-draftjs = "^1.0.1"
  markdown = "^3.1.1"
  maxminddb = ">=1.5.4,<3.0.0"
  petl = "1.7.9"
  opentracing = "^2.3.0"
  phonenumberslite = "^8.12.25"
  prices = "^1.0"
  psycopg2 = "^2.8.3"
  razorpay = "^1.2"
  requests = "^2.22"
  sentry-sdk = "^1.0"
  stripe = "^3.0.0"
  text-unidecode = "^1.2"
  # libpango >=1.44 is required
  weasyprint = ">=53.0"
  oauthlib = "^3.1"
  jaeger-client = "^4.5.0"
  openpyxl = "^3.0.3"
  django-cache-url = "^3.1.2"
  pyjwt = ">=2.4.0,<3.0.0"
  python-json-logger = ">=0.1.11,<2.1.0"
  pytimeparse = "^1.1.8"
  django-redis = "^5.0.0"
  Adyen = "^4.0.0"
  google-cloud-pubsub = ">=1.7,<3.0"
  gunicorn = "^20.0.4"
  pybars3 = "^0.9.7"
  html2text = "^2020.1.16"
  authorizenet = "^1.1.3"
  azure-common = "^1.1.28"
  azure-storage-blob = "^12.12.0"
  azure-storage-common = "^2.1.0"
  sendgrid = "^6.7.1"
  micawber = "^0.5.2"
  django-celery-beat = "^2.2.1"
  posuto = "^2022.3.0"
  cryptography = "^37.0.2"
  graphene = "<3.0"
  uvicorn = {extras = ["standard"], version = "^0.17.5"}
  Authlib = "^1.0.0"
  types-redis = "^4.2.6"

    [tool.poetry.dependencies.celery]
    version = ">=4.4.5,<6.0.0"
    extras = [ "redis" ]

    [tool.poetry.dependencies.django-storages]
    version = "^1.11"
    extras = [ "google" ]

    [tool.poetry.dependencies.python-magic-bin]
    version = "^0.4.14"
    platform = "win32"

  [tool.poetry.dev-dependencies]
  black = "22.3.0"
  codecov = "^2.1.11"
  coverage = "^6.3"
  django-debug-toolbar = "^3.2"
  django-debug-toolbar-request-history = "^0"
  django-graphiql-debug-toolbar = "^0.2.0"
  django-extensions = "^3.1.2"
  flake8 = "^4.0.1"
  isort = "^5.8.0"
  pre-commit = "^2.13"
  pycodestyle = "^2.5"
  pydocstyle = "^6.1"
  pylint = "^2.8.3"
  pylint-celery = "^0"
  pylint-django = "^2.4.4"
  pylint-plugin-utils = "^0"
  pytest = "^7.0.1"
  pytest-celery = "^0.0.0"
  pytest-cov = "^3.0.0"
  pytest-django = "4.5.2"
  pytest-django-queries = "~1.2"
  pytest-mock = "^3.6.1"
  pytest-recording = "^0.12.0"
  pytest-xdist = "^2.2.1"
  tox = "^3.23.1"
  mypy = "^0.960"
  pywatchman = "^1.4.1"
  types-requests = "^2.25.0"
  types-pytz = "^2021.1.0"
  types-pkg-resources = "^0.1.3"
  types-python-dateutil = "^2.8.0"
  # django-stubs locked to 1.8.0 due to https://github.com/typeddjango/django-stubs/issues/700
  django-stubs = "1.8.0"
  pytest-socket = "^0.5.1"
  before_after = "^1.0.1"
  types-certifi = "^2021.10.8"
  types-freezegun = "^1.1.7"
  types-six = "^1.16.12"
  fakeredis = "^1.8"
  types-redis = "^4.2.6"

[tool.black]
target_version = [ "py35", "py36", "py37", "py38" ]
include = "\\.pyi?$"
exclude = """
/(\\.git/
  |\\.eggs
  |\\.hg
  |__pycache__
  |\\.cache
  |\\.ipynb_checkpoints
  |\\.mypy_cache
  |\\.pytest_cache
  |\\.tox
  |\\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
)/
"""


[project]
name = "saleor"
version = ""
description = "saleor"
authors = [
    {name = "VONQ Dev", email = "dev@vonq.com"},
]
dependencies = [
  "adyen==4.0.0",
  "amqp==5.1.1",
  "aniso8601==7.0.0",
  "anyio==3.6.1",
  "asgiref==3.5.2",
  "async-timeout==4.0.2",
  "authlib==1.0.1",
  "authorizenet==1.1.4",
  "azure-common==1.1.28",
  "azure-core==1.24.2",
  "azure-storage-blob==12.12.0",
  "azure-storage-common==2.1.0",
  "babel==2.10.3",
  "beautifulsoup4==4.7.1",
  "billiard==3.6.4.0",
  "boto3==1.24.22",
  "botocore==1.27.22",
  "braintree==4.15.2",
  "brotli==1.0.9",
  "brotlicffi==1.0.9.2",
  "cachetools==5.2.0",
  "celery==5.2.7",
  "certifi==2022.6.15",
  "cffi==1.15.1",
  "charset-normalizer==2.1.0",
  "click-didyoumean==0.3.0",
  "click-plugins==1.1.1",
  "click-repl==0.2.0",
  "click==8.1.3",
  "colorama==0.4.5",
  "cryptography==37.0.3",
  "cssselect2==0.6.0",
  "deprecated==1.2.13",
  "dj-database-url==0.5.0",
  "dj-email-url==1.0.5",
  "django-appconf==1.0.5",
  "django-cache-url==3.4.2",
  "django-celery-beat==2.3.0",
  "django-countries==7.3.2",
  "django-filter==22.1",
  "django-js-asset==2.0.0",
  "django-measurement==3.2.4",
  "django-mptt==0.13.4",
  "django-phonenumber-field==6.3.0",
  "django-prices-openexchangerates==1.1.0",
  "django-prices-vatlayer==1.1.0",
  "django-prices==2.2.0",
  "django-redis==5.2.0",
  "django-storages==1.13.1",
  "django-timezone-field==5.0",
  "django-versatileimagefield==2.2",
  "django==3.2.16",
  "draftjs-sanitizer==1.0.0",
  "enmerkar==0.7.1",
  "et-xmlfile==1.1.0",
  "faker==13.14.0",
  "fonttools==4.33.3",
  "freezegun==1.2.2",
  "google-api-core==2.8.2",
  "google-auth==2.9.0",
  "google-cloud-core==2.3.1",
  "google-cloud-pubsub==2.13.0",
  "google-cloud-storage==2.4.0",
  "google-crc32c==1.3.0",
  "google-i18n-address==2.5.2",
  "google-measurement-protocol==1.1.0",
  "google-resumable-media==2.3.3",
  "googleapis-common-protos==1.56.3",
  "graphene==2.1.9",
  "graphql-core==2.3.2",
  "graphql-relay==2.0.1",
  "grpc-google-iam-v1==0.12.4",
  "grpcio-status==1.47.0",
  "grpcio==1.47.0",
  "gunicorn==20.1.0",
  "h11==0.13.0",
  "html-to-draftjs==1.0.1",
  "html2text==2020.1.16",
  "html5lib==1.1",
  "httptools==0.4.0",
  "idna==3.3",
  "importlib-metadata==4.12.0",
  "isodate==0.6.1",
  "jaeger-client==4.8.0",
  "jmespath==1.0.1",
  "jsonfield==3.1.0",
  "kombu==5.2.4",
  "lxml==4.9.1",
  "markdown==3.3.7",
  "maxminddb==2.2.0",
  "measurement==3.2.0",
  "micawber==0.5.4",
  "mpmath==1.2.1",
  "msrest==0.7.1",
  "oauthlib==3.2.0",
  "openpyxl==3.0.10",
  "opentracing==2.4.0",
  "packaging==21.3",
  "petl==1.7.9",
  "phonenumberslite==8.12.51",
  "pillow==9.2.0",
  "posuto==2022.7.0",
  "prices==1.1.0",
  "promise==2.3",
  "prompt-toolkit==3.0.30",
  "proto-plus==1.20.6",
  "protobuf==3.19.5",
  "psycopg2==2.9.3",
  "pyasn1-modules==0.2.8",
  "pyasn1==0.4.8",
  "pybars3==0.9.7",
  "pycparser==2.21",
  "pydyf==0.2.0",
  "pyjwt==2.4.0",
  "pymeta3==0.5.1",
  "pyparsing==3.0.9",
  "pyphen==0.12.0",
  "python-crontab==2.6.0",
  "python-dateutil==2.8.2",
  "python-dotenv==0.20.0",
  "python-http-client==3.3.7",
  "python-json-logger==2.0.2",
  "python-magic==0.4.27",
  "pytimeparse==1.1.8",
  "pytz==2022.1",
  "pyxb==1.2.5",
  "pyyaml==6.0",
  "razorpay==1.3.0",
  "redis>=3.5.3,<4.0.0",
  "requests-oauthlib==1.3.1",
  "requests==2.28.1",
  "rsa==4.8",
  "rx==1.6.1",
  "s3transfer==0.6.0",
  "sendgrid==6.9.7",
  "sentry-sdk==1.10.1",
  "six==1.16.0",
  "sniffio==1.2.0",
  "soupsieve==2.3.2.post1",
  "sqlparse==0.4.2",
  "starkbank-ecdsa==2.0.3",
  "stripe==3.5.0",
  "sympy==1.10.1",
  "text-unidecode==1.3",
  "threadloop==1.0.2",
  "thrift==0.16.0",
  "tinycss2==1.1.1",
  "tornado==6.2",
  "types-redis==4.3.3",
  "typing-extensions==4.3.0",
  "tzdata==2022.1",
  "urllib3<=1.27",
  "uvicorn==0.17.6",
  "uvloop==0.16.0",
  "vine==5.0.0",
  "watchgod==0.8.2",
  "wcwidth==0.2.5",
  "weasyprint==55.0",
  "webencodings==0.5.1",
  "websockets==10.3",
  "wrapt==1.14.1",
  "zipp==3.8.0",
  "zopfli==0.2.1"
]
requires-python = ">=3.9"
license = {text = "Proprietary"}


[tool.pdm.dev-dependencies]
dev = [
    "pytest-celery==0.0.0",
    "pytest-cov==3.0.0",
    "pytest-django-queries==1.2.0",
    "pytest-django==4.5.2",
    "pytest-forked==1.4.0",
    "pytest-mock==3.8.1",
    "pytest-recording==0.12.1",
    "pytest-socket==0.5.1",
    "pytest-xdist==2.5.0",
    "pytest==7.1.2"
]